--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "boop",
   "title": "Boop",
-  "description": "Boop for Raycast",
+  "description": "Boop for Raycast. Paste your plain text and instantly run handy text operations, all within Raycast.",
   "icon": "extension-icon.png",
   "author": "neoish",
   "license": "MIT",
