--- a/package.json
+++ b/package.json
@@ -34,6 +34,6 @@
     "sync-actions": "node sync-actions.js",
     "create-script": "node create-script.js",
     "prepublishOnly": "echo \"\\n\\nIt seems like you are trying to publish the Raycast extension to npm.\\n\\nIf you did intend to publish it to npm, remove the \\`prepublishOnly\\` script and rerun \\`npm publish\\` again.\\nIf you wanted to publish it to the Raycast Store instead, use \\`npm run publish\\` instead.\\n\\n\" && exit 1",
-    "publish": "npx @raycast/api@latest publish"
+    "publish": "npm run sync-actions && npx @raycast/api@latest publish"
   }
 }
